Fix player time width to avoid UI "jumping"

--- a/src/scss/_player.scss
+++ b/src/scss/_player.scss
@@ -57,6 +57,10 @@
   }
 }
 
+.player__time {
+  min-width: 32px;
+}
+
 .player__progress {
   height: 48px;
   line-height: 48px;
